--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="images/Webp.net-resizeimage.png" alt="Manzoor Profile picture"></td>
+      <td> <img src="images/circle-cropped.png" alt="Manzoor Profile picture"></td>
       <td>
         <h1>Manzoor Abdul Sadhar</h1>
         <p><em>Software Developer at <strong><a href="https://www.saadhvi.com/">Saadhvi Technologies</a></strong>.</em></p>
         <p>
-          I am a Software Developer at Saadhvi Technologies.I like reading newspaper .
+          I am a Software Developer at Saadhvi Technologies.I like Coding .
         </p>
 
       </td>
