Renaming Image name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="images/circle-cropped.png" alt="Profile picture"></td>
+      <td> <img src="Webp.net-resizeimage.png" alt="Profile picture"></td>
       <td>
         <h1>Manzoor</h1>
         <p><em>Software Developer at <strong><a href="https://www.saadhvi.com/">Saadhvi Technologies</a></strong>.</em></p>
