Changed index file for phase 2

--- a/index.html
+++ b/index.html
@@ -1,105 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Manzoor</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon1.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+      <h1 class="headerClass"> I'm Manzoor.</h1>
+      <h2 class="paragraph1">a <span class="software">software</span> developer</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
+      <img src="images/mountain.png" alt="mountain-image">
 
-<head>
-  <meta charset="utf-8">
-  <title>Manzoor's Website</title>
-</head>
-
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td> <img src="images/Webp.net-resizeimage.png" alt="Profile picture"></td>
-      <td>
-        <h1>Manzoor</h1>
-        <p><em>Software Developer at <strong><a href="https://www.saadhvi.com/">Saadhvi Technologies</a></strong>.</em></p>
-        <p>
-          I am a Software Developer at Saadhvi Technologies.I like Coding .
-        </p>
-
-      </td>
-    </tr>
-  </table>
-  <hr>
-
-  <h3>Education</h3>
-  <ul>
-    <li>B.E(ECE) From <a href="http://www.dce.edu.in/contact.html">Dhanalakshmi College of Engineering</a></li>
-    <li>Higher Secondary from <a href="http://www.zionschool.ac.in/">ZION Matriculation Hr. Secondary School</a></li>
-    <li>SSLC from Fathima Matriculation Hr. Secondary School</li>
-  </ul>
-  <hr>
-  <h3>Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Duration</th>
-        <th>position</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          2019
-        </td>
-        <td>
-          DemoCompany
-        </td>
-      </tr>
-      <tr>
-        <td>
-          2018-2019
-        </td>
-        <td>
-          Saadhvi
-        </td>
-      </tr>
-    </tbody>
-  </table>
- <hr>
-  <h3>Skills</h3>
-
-        <table cellspacing="10">
-          <tr>
-            <td>
-              Core Java
-            </td>
-            <td>
-              ★★★★★
-            </td>
-
-          </tr>
-          <tr>
-            <td>
-              React
-            </td>
-            <td>
-              ★★★★☆
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Mysql
-            </td>
-            <td>
-              ★★★★★
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Cassandra
-            </td>
-            <td>
-              ★★★★☆
-            </td>
-          </tr>
-        </table>
+    </div>
+    <div class="middle-container">
+    <div class="profile">
+      <img src="images/circle-cropped (1).png" class="avatarimage" alt="profile-pic">
+      <h2>Hello.</h2>
+      <p class="aboutmeclass">Hello, I am a Freelance Programmer who is intersted in developing cool applications. I 💓 Cofee and Gym Workout.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="skillimage1" src="images/circle-cropped (3).png" alt="skill1-pic">
+        <h3>Website Design</h3>
+        <p >I am Passionate about doing website Designs. Either I can transform your idea/design into a website. Also I can suggest cool designs.</p>
+      </div>
+      <div class="skill-row">
+        <img class="skillimage2" src="images/circle-cropped (2).png" alt="skill2-pic">
+        <h3>Application Development</h3>
+        <p >If you have a web application in your mind, you have come place to the right place.I have expertise in Java,node js ,framework design and database design. Basically I can be your Full Stack Developer.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you have a need to build any type of application.</h3>
+      <p class="endmessage">Let's give life to some cool applications and designs. Earn some money, build a product/business and grow together.</p>
+      <button class="btn" >CONTACT ME</button>
+    </div>
+  </div>
 
 
-  <hr />
-  <a href="hobbies.html">Hobbies</a>
-  <a href="contact.html">Contact Me</a>
-
-</body>
-
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://twitter.com/">Website</a>
+    <p class="copyrightP">© 2020 Manzoor Abdul Sadhar.</p>
+  </div>
+  </body>
 </html>
